rutine: change titles, delite pictures, fix div

--- a/index.html
+++ b/index.html
@@ -28,15 +28,17 @@
           <i>to the gorgeous</i>
         </div>
         <h1>sedona</h1>
-        <div><i>"because the grand canion sucks"</i></div>
+        <div><q>"because the grand canion sucks"</q></div>
       </section>
     </header>
 
     <main>
       <section>
+        <div>
         <strong>
           Седона — небольшой городок в Аризоне, заслуживающий большего!
         </strong>
+      </div>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
         <ul>
           <li>
@@ -45,25 +47,19 @@
                 <h3>Настоящий городок</h3>
                 Седона - не аттракцион для туристов,там течёт своя жизнь
               </div>
-              <img
-                src="./img/real-town.png"
-                alt="настоящий городок"
-                width="800"
-                height="256"
-              />
 
               <ul>
                 <li>
                   <h4>Жильё</h4>
-                  Рекомендуем пожить в настоящем мотеле, всё как в кино!
+                  <span>Рекомендуем пожить в настоящем мотеле, всё как в кино!</span>
                 </li>
                 <li>
                   <h4>Еда</h4>
-                  Всегда заказывайте фирменный бургер, вы не разочаруетесь!
+                  <span>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</span>
                 </li>
                 <li>
                   <h4>Сувениры</h4>
-                  Не только китайского, но и местного производства!
+                  <span>Не только китайского, но и местного производства!</span>
                 </li>
               </ul>
             </div>
@@ -71,17 +67,9 @@
 
           <li>
             <div>
-              <div>
-                <img
-                  src="./img/devil.png"
-                  alt="мост дьявола"
-                  width="800"
-                  height="256"
-                />
-                <h4>Там есть Мост дьявола</h4>
+                <h3>Там есть Мост дьявола</h3>
                 Да, по нему можно пройти! Если конечно вы осмелитесь
               </div>
-            </div>
           </li>
 
           <li>
@@ -93,21 +81,21 @@
             ехать в седону из лас-вегаса совсем не скучно!
           </li>
           <li>
-            <h4>мало туристов</h4>
+            <h3>мало туристов</h3>
             большинство едет в гранд каньон и толпится там
           </li>
         </ul>
       </section>
 
       <section>
-        <h3>Заинтересовались?</h3>
+        <h2>Заинтересовались?</h2>
         <p>
           Укажите предполагаемые даты поездки, и мы покажем вам лучшие
           предложения гостиниц в седоне
         </p>
 
-        <h3>поиск гостиницы в седоне</h3>
         <form>
+        <h3>поиск гостиницы в седоне</h3>
           <label>
             дата заезда
             <input name="created" />
@@ -121,9 +109,9 @@
             <!-- Title -->
             <div>взрослые</div>
           </div>
-
+           
           <label>
-            <!-- взрослые -->
+          взрослые</label>
             <div class="item">
               <div>
                 <button class="minus-btn" type="button" name="button">
@@ -140,11 +128,10 @@
                 </button>
               </div>
             </div>
-          </label>
 
           <div>дети</div>
           <label>
-            <!-- дети -->
+            дети</label>
             <div>
               <div>
                 <button class="minus-btn" type="button" name="button">
@@ -161,7 +148,6 @@
                 </button>
               </div>
             </div>
-          </label>
           <button type="submit">найти</button>
         </form>
       </section>
@@ -169,14 +155,14 @@
     <footer>
       <a href="blank.html">#visitsedona</a>
 
-      <a href="tel:" +74956660166>ТЕЛ: +7(495) 666-01-66</a>
+      <a href="tel:+74956660166">ТЕЛ: +7(495) 666-01-66</a>
 
       <a href="blank.html"><img src="./img/twitter.png" alt="twitter" /></a>
       <a href="blank.html"><img src="./img/fb-icon.png" alt="facebook" /></a>
       <a href="blank.html"><img src="./img/youtube.png" alt="youtube" /></a>
 
       <p>website by</p>
-      <a href="blank.html">
+      <a href="https://htmlacademy.ru/study">
         <img src="./img/logo-htmlacademy.png" alt="logo-htmlacademy" />
       </a>
     </footer>
