--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Sedona</title>
   </head>
 
-  <body class="page-body">
-    <header class="header">
-      <nav class="nav">
-        <ul class="nav-item">
+  <body>
+    <header>
+      <nav>
+        <ul>
           <li><a href="blank.html">информация</a></li>
           <li><a href="blank.html">фото и видео</a></li>
           <li>
@@ -22,147 +22,146 @@
           <li><a href="hotels.html">гостиницы</a></li>
         </ul>
       </nav>
-      <section class="logo">
-        <div class="welcome">
+      <section>
+        <div>
           <strong>welcome</strong>
-        </div>
-        <div class="gorgeous">
           <i>to the gorgeous</i>
         </div>
-        <h1 class="sedona">sedona</h1>
-        <div class="garand-canion"><q>"because the grand canion sucks"</q></div>
+        <h1>sedona</h1>
+        <div><q>"because the grand canion sucks"</q></div>
       </section>
     </header>
 
     <main>
       <section>
-        <div class="title">
-          <strong  class="main-headline">
-            Седона — небольшой городок в Аризоне, заслуживающий большего!
-          </strong>
-        <p class="main-text">
-          Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!
-        </p>
+        <div>
+        <strong>
+          Седона — небольшой городок в Аризоне, заслуживающий большего!
+        </strong>
       </div>
+        <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
         <ul>
           <li>
             <div>
-              <div  class="advantage">
-                <h3  class="headline">Настоящий городок</h3>
-                <span class="text">
-                  Седона - не аттракцион для туристов,там течёт своя жизнь
-                </span>
+              <div>
+                <h3>Настоящий городок</h3>
+                Седона - не аттракцион для туристов,там течёт своя жизнь
               </div>
 
-              <div class="offers">
               <ul>
-                <li class="living">
-                  <h4 class="headline">Жильё</h4>
-                  <span class="text"
-                    >Рекомендуем пожить в настоящем мотеле, всё как в
-                    кино!</span
-                  >
+                <li>
+                  <h4>Жильё</h4>
+                  <span>Рекомендуем пожить в настоящем мотеле, всё как в кино!</span>
                 </li>
-                <li class="food">
-                  <h4 class="headline">Еда</h4>
-                  <span class="text"
-                    >Всегда заказывайте фирменный бургер, вы не
-                    разочаруетесь!</span
-                  >
+                <li>
+                  <h4>Еда</h4>
+                  <span>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</span>
                 </li>
-                <li class="souvenirs">
-                  <h4 class="headline">Сувениры</h4>
-                  <span class="text"
-                    >Не только китайского, но и местного производства!</span>
+                <li>
+                  <h4>Сувениры</h4>
+                  <span>Не только китайского, но и местного производства!</span>
                 </li>
               </ul>
             </div>
           </li>
 
           <li>
-            <div class="advantage">
-              <h3 class="header">Там есть Мост дьявола</h3>
-              <span class="text">Да, по нему можно пройти! Если конечно вы осмелитесь</span>
-            </div>
+            <div>
+                <h3>Там есть Мост дьявола</h3>
+                Да, по нему можно пройти! Если конечно вы осмелитесь
+              </div>
           </li>
-         <div class="side-advantages">
-          <li class="side-advantage">
-            <h3 class="header">небольшая площадь</h3>
-            <span class="text">все достопримечательности находятся очень близко</span>
+
+          <li>
+            <h3>небольшая площадь</h3>
+            все достопримечательности находятся очень близко
           </li>
-          <li class="side-advantage">
-            <h3 class="header">красивая дорога</h3>
-            <span class="taxt">ехать в седону из лас-вегаса совсем не скучно!</span>
+          <li>
+            <h3>красивая дорога</h3>
+            ехать в седону из лас-вегаса совсем не скучно!
           </li>
-          <li class="side-advantage">
-            <h3 class="header">мало туристов</h3>
-            <span class="text">большинство едет в гранд каньон и толпится там</span>
+          <li>
+            <h3>мало туристов</h3>
+            большинство едет в гранд каньон и толпится там
           </li>
-        </div>
         </ul>
       </section>
 
       <section>
-        <h2 class="side-headline">Заинтересовались?</h2>
-        <p class="side-text">
+        <h2>Заинтересовались?</h2>
+        <p>
           Укажите предполагаемые даты поездки, и мы покажем вам лучшие
           предложения гостиниц в седоне
         </p>
 
-        <form class="form">
-          <h3 class="main-headline">поиск гостиницы в седоне</h3>
-          <label class="input">
-            дата заезда:
+        <form>
+        <h3>поиск гостиницы в седоне</h3>
+          <label>
+            дата заезда
             <input name="created" />
           </label>
 
-          <label class="input">
-            дата выезда:
+          <label>
+            дата выезда
             <input name="created" />
           </label>
           <div>
             <!-- Title -->
-            <div class="input">взрослые:</div>
+            <div>взрослые</div>
           </div>
-
-          <div class="item">
-            <div>
-              <button class="minus-btn" type="button" name="button">
-                <img src="./img/minus.svg" alt="минус" width="12" height="3" />
-              </button>
-              <input type="text" name="name" value="1" />
-              <button class="plus-btn" type="button" name="button">
-                <img src="./img/plus.svg" alt="плюс" width="12" height="3" />
-              </button>
+           
+          <label>
+          взрослые</label>
+            <div class="item">
+              <div>
+                <button class="minus-btn" type="button" name="button">
+                  <img
+                    src="./img/minus.svg"
+                    alt="минус"
+                    width="12"
+                    height="3"
+                  />
+                </button>
+                <input type="text" name="name" value="1" />
+                <button class="plus-btn" type="button" name="button">
+                  <img src="./img/plus.svg" alt="плюс" width="12" height="3" />
+                </button>
+              </div>
             </div>
-          </div>
 
-          <div class="input">дети:</div>
-          <div>
+          <div>дети</div>
+          <label>
+            дети</label>
             <div>
-              <button class="minus-btn" type="button" name="button">
-                <img src="./img/minus.svg" alt="минус" width="12" height="3" />
-              </button>
-              <input type="text" name="name" value="1" />
-              <button class="plus-btn" type="button" name="button">
-                <img src="./img/plus.svg" alt="плюс" width="12" height="3" />
-              </button>
+              <div>
+                <button class="minus-btn" type="button" name="button">
+                  <img
+                    src="./img/minus.svg"
+                    alt="минус"
+                    width="12"
+                    height="3"
+                  />
+                </button>
+                <input type="text" name="name" value="1" />
+                <button class="plus-btn" type="button" name="button">
+                  <img src="./img/plus.svg" alt="плюс" width="12" height="3" />
+                </button>
+              </div>
             </div>
-          </div>
           <button type="submit">найти</button>
         </form>
       </section>
     </main>
-    <footer class="footer">
-      <p class="main-header"><a href="blank.html">#visitsedona</a></p>
+    <footer>
+      <a href="blank.html">#visitsedona</a>
 
-      <p class="main-header"><a href="tel:+74956660166">ТЕЛ: +7(495) 666-01-66</a></p>
+      <a href="tel:+74956660166">ТЕЛ: +7(495) 666-01-66</a>
 
-      <button class="social-network"><a href="blank.html"><img src="./img/twitter.png" alt="twitter" /></a></button>
-      <button class="social-network"><a href="blank.html"><img src="./img/fb-icon.png" alt="facebook" /></a></button>
-      <button class="social-network"><a href="blank.html"><img src="./img/youtube.png" alt="youtube" /></a></button>
+      <a href="blank.html"><img src="./img/twitter.png" alt="twitter" /></a>
+      <a href="blank.html"><img src="./img/fb-icon.png" alt="facebook" /></a>
+      <a href="blank.html"><img src="./img/youtube.png" alt="youtube" /></a>
 
-      <p class="webcite-by">website by</p>
+      <p>website by</p>
       <a href="https://htmlacademy.ru/study">
         <img src="./img/logo-htmlacademy.png" alt="logo-htmlacademy" />
       </a>
